fixing overflow-x

--- a/src/index.css
+++ b/src/index.css
@@ -3,10 +3,8 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
 }
 
 body {
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
